--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -31,6 +31,9 @@ module:
   rdf: 0
   search: 0
   shortcut: 0
+  social_api: 0
+  social_auth: 0
+  social_auth_google: 0
   system: 0
   taxonomy: 0
   text: 0
